--- a/packages/marketplace/src/styles/pages/help.scss
+++ b/packages/marketplace/src/styles/pages/help.scss
@@ -1,4 +1,5 @@
 @import '../base/colors.scss';
+@import '../base/browser.scss';
 
 .wrapHelp {
   background-color: $white;
@@ -6,7 +7,7 @@
 }
 .wrapListItems {
   padding: 1rem;
-  @media all and (-ms-high-contrast:none) {
+  @include for-ie11-only {
     background-color: $white;
   }
 }
@@ -20,7 +21,7 @@
 .wrapImage {
   width: 100%;
   margin-bottom: 2rem;
-  @media all and (-ms-high-contrast:none) {
+  @include for-ie11-only {
     min-height: 218px;
   }
 }
@@ -31,7 +32,7 @@
 .text {
   flex-grow: 1;
   margin-bottom: 1.5rem;
-  @media all and (-ms-high-contrast:none) {
+  @include for-ie11-only {
     width: 100%;
   }
 }
